--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="chandelier">Chandelier</string>
     <string name="leaf_removal">Leaf Removal</string>
     <string name="next">Next</string>
+    <string name="forgot_password">Forgot Password?</string>
 </resources>
